<?xml version="1.0" encoding="utf-8"?>
<!-- 设置页的结构：一级页只有七个分类入口（嵌套的 PreferenceScreen，点击由 MainActivity 的
     onPreferenceStartScreen 打开二级页）加末尾四个页面入口；分类里的行都在二级页。
     二级页用 setPreferencesFromResource(这份 XML, 分类 key) 加载，整份文件都会被解析。
     分类 key 与顺序由 SettingsPreferenceFragment.sections 对应，SettingsSectionsResourcesTest 钉住 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        app:icon="@drawable/ic_device_developer_mode"
        app:key="sectionService"
        app:persistent="false"
        app:title="@string/settings_service">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/tun_implementation"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="tunImplementation"
            app:title="@string/tun_implementation"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.MTUPreference
            app:defaultValue="9000"
            app:entries="@array/mtu_select"
            app:entryValues="@array/mtu_select"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />
        <SwitchPreferenceCompat
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_color_lens_24"
        app:key="sectionInterface"
        app:persistent="false"
        app:title="@string/settings_interface">
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_center_focus_weak_24"
            app:key="alwaysShowAddress"
            app:summary="@string/always_show_address_sum"
            app:title="@string/always_show_address" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:key="hideFromRecents"
            app:title="@string/hide_from_recents" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_message_24"
        app:key="sectionNotification"
        app:persistent="false"
        app:title="@string/settings_notification">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="true"
            app:key="profileTrafficStatistics"
            app:summary="@string/profile_traffic_statistics_summary"
            app:title="@string/profile_traffic_statistics" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:key="showGroupInNotification"
            app:title="@string/show_group_in_notification" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_maps_directions"
        app:key="sectionRoute"
        app:persistent="false"
        app:title="@string/settings_route">
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:key="bypassLanInCore"
            app:title="@string/bypass_lan_in_core" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1"
            app:entries="@array/traffic_sniffing_values"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="trafficSniffing"
            app:title="@string/traffic_sniffing"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="resolveDestination"
            app:summary="@string/resolve_destination_summary"
            app:title="@string/resolve_destination" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/rules_dat_provider"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_rule_folder_24"
            app:key="rulesProvider"
            app:title="@string/route_rules_provider"
            app:useSimpleSummaryProvider="true" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_action_dns"
        app:key="sectionDns"
        app:persistent="false"
        app:title="@string/settings_dns">
        <EditTextPreference
            app:defaultValue="https://dns.google/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://223.5.5.5/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_direct"
            app:title="@string/domain_strategy_for_direct"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_server"
            app:title="@string/domain_strategy_for_server"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_hardware_router"
        app:key="sectionInbound"
        app:persistent="false"
        app:title="@string/settings_inbound">
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="true"
            app:key="appendHttpProxy"
            app:summary="@string/append_http_proxy_sum"
            app:title="@string/append_http_proxy" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/baseline_developer_board_24"
        app:key="sectionAdvanced"
        app:persistent="false"
        app:title="@string/settings_advanced">
        <PreferenceCategory app:title="@string/settings_cat_security">
            <SwitchPreferenceCompat
                app:icon="@drawable/ic_action_lock_open"
                app:key="globalAllowInsecure"
                app:title="@string/global_allow_insecure" />
            <SwitchPreferenceCompat
                app:iconSpaceReserved="true"
                app:key="allowInsecureOnRequest"
                app:title="@string/allow_insecure_on_request_sum" />
            <moe.matsuri.nb4a.ui.SimpleMenuPreference
                app:defaultValue="1.2"
                app:entries="@array/app_tls_version"
                app:entryValues="@array/app_tls_version"
                app:key="appTLSVersion"
                app:title="@string/app_tls_version"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
        <PreferenceCategory app:title="@string/settings_cat_debug">
            <moe.matsuri.nb4a.ui.UrlTestPreference
                app:defaultValue="http://cp.cloudflare.com/"
                app:icon="@drawable/ic_baseline_cast_connected_24"
                app:key="connectionTestURL"
                app:title="@string/connection_test_url"
                app:useSimpleSummaryProvider="true" />
            <SwitchPreferenceCompat
                app:icon="@drawable/baseline_construction_24"
                app:key="enableClashAPI"
                app:summary="@string/enable_clash_api_summary"
                app:title="@string/enable_clash_api" />
            <moe.matsuri.nb4a.ui.LongClickListPreference
                app:defaultValue="0"
                app:entries="@array/log_level"
                app:entryValues="@array/int_array_5"
                app:icon="@drawable/ic_baseline_bug_report_24"
                app:key="logLevel"
                app:title="@string/log_level"
                app:useSimpleSummaryProvider="true" />
            <moe.matsuri.nb4a.ui.EditConfigPreference
                app:icon="@drawable/ic_baseline_layers_24"
                app:key="globalCustomConfig"
                app:title="@string/custom_config"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 原侧边抽屉第二、三组的入口：点击打开对应的二级页面（不存值），直接放在根下，
         与上面的分类入口行距一致。仪表板只在开启 Clash API 时显示。
         不要再给它们包一层 PreferenceCategory：库的分类样式会在它上方画分隔线，分类本身
         还占一段高度，这一处的行距就和别处不一样了（2026-10-11 维护者要求去掉） -->
    <Preference
        app:icon="@drawable/ic_baseline_transform_24"
        app:key="navDashboard"
        app:persistent="false"
        app:title="@string/menu_dashboard" />
    <Preference
        app:icon="@drawable/ic_baseline_bug_report_24"
        app:key="navLogs"
        app:persistent="false"
        app:title="@string/menu_log" />
    <Preference
        app:icon="@drawable/baseline_construction_24"
        app:key="navTools"
        app:persistent="false"
        app:title="@string/menu_tools" />
    <Preference
        app:icon="@drawable/ic_baseline_info_24"
        app:key="navAbout"
        app:persistent="false"
        app:title="@string/menu_about" />
</PreferenceScreen>
