<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/backup_configurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_groups_and_configurations"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <CheckBox
        android:id="@+id/backup_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_rules"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <CheckBox
        android:id="@+id/backup_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_settings"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/backup_import_summary"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorError">

    </TextView>

</LinearLayout>